--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,6 @@ body {
     align-items: center;
 }
 .detail-title h3 button {
-    padding: 17px 10px;
     background: #00002d;
     border-radius: 50%;
     text-align: center;
@@ -100,6 +99,8 @@ body {
     color: white;
     font-size: 20px;
     margin-left: 10px;
+    width: 50px;
+    height:50px;
 }
 .detail-overview {
     width: 50%;
